--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -317,9 +317,16 @@ jobs:
             if [[ "$withRoot" == "ksu" ]]; then
               curl -LSs "https://raw.githubusercontent.com/backslashxx/KernelSU/magic/kernel/setup.sh" | bash -s 12103+155
             else
-              curl -LSs "https://raw.githubusercontent.com/SukiSU-Ultra/SukiSU-Ultra/main/kernel/setup.sh" | bash -s susfs-main
-              if [[ "$whichhook" == "syscall" ]]; then
-                patch -d KernelSU -p1 < SUSFS/kernel_patches/KernelSU/security_bprm_check_for_sukisu.patch
+              if [[ "$whichSUSFS" == "157" ]]; then
+                curl -LSs "https://raw.githubusercontent.com/SukiSU-Ultra/SukiSU-Ultra/main/kernel/setup.sh" | bash -s susfs-main
+                if [[ "$whichhook" == "syscall" ]]; then
+                  patch -d KernelSU -p1 < SUSFS/kernel_patches/KernelSU/security_bprm_check_for_sukisu.patch
+                fi
+              else
+                curl -LSs "https://raw.githubusercontent.com/SukiSU-Ultra/SukiSU-Ultra/main/kernel/setup.sh" | bash -s susfs-1.5.8
+                if [[ "$whichhook" == "syscall" ]]; then
+                  patch -d KernelSU -p1 < SUSFS/kernel_patches/KernelSU/security_bprm_check_for_sukisu.patch
+                fi
               fi
             fi
           fi
