Build: fixed test builds susfs branch
Co-authored-by: cvnertnc <the.civanertunc@gmail.com>

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -270,7 +270,7 @@ jobs:
 
           cat arch/${{ env.arch }}/configs/${{ env.DEFCONFIG_NAME }}
 
-          SUSFS_BRANCH=main
+          SUSFS_BRANCH=dev
 
           git clone --recursive -j $(nproc) --branch $SUSFS_BRANCH https://x-access-token:${{ secrets.GH_PAT }}@github.com/cvnertnc/susfs4ksu-begonia SUSFS
 
@@ -299,7 +299,7 @@ jobs:
             rm -rf "./SUSFS"
           fi
 
-          SUSFS_BRANCH=main
+          SUSFS_BRANCH=dev
 
           git clone --recursive -j $(nproc) --branch $SUSFS_BRANCH https://x-access-token:${{ secrets.GH_PAT }}@github.com/cvnertnc/susfs4ksu-begonia SUSFS
 
