Repos: some fixes
Co-authored-by: cvnertnc <the.civanertunc@gmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
         id: fetch_latest_commits
         run: |
           declare -A repos=(
-            ["KernelSU"]="backslashxx/KernelSU@magic"
+            ["KernelSU"]="backslashxx/KernelSU@master"
             ["KernelSU-Next"]="KernelSU-Next/KernelSU-Next@next"
             ["SukiSU-Ultra"]="SukiSU-Ultra/SukiSU-Ultra@main"
           )
