--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -220,9 +220,21 @@ jobs:
         env:
           arch: ${{ steps.generate-args.outputs.ARCH }}
         run: |
+          if [ -d "./SUSFS" ]; then
+            rm -rf "./SUSFS"
+          fi
+
           echo -e 'CONFIG_KALLSYMS_ALL=y' >> arch/${{ env.arch }}/configs/${{ env.DEFCONFIG_NAME }}
 
-          curl -LSs https://github.com/cvnertnc/kernel_xiaomi_mt6785/commit/d01168989c97157ccd3710d28000a4db83c46e58.patch | patch -p1
+          SUSFS_BRANCH=dev
+
+          git clone --recursive -j $(nproc) --branch $SUSFS_BRANCH https://x-access-token:${{ secrets.GH_PAT }}@github.com/cvnertnc/susfs4ksu-begonia SUSFS
+
+          SUSFS_REF=$(git -C SUSFS rev-parse --short HEAD)
+          echo -e "SUSFS_REF=$SUSFS_REF" >> $GITHUB_OUTPUT
+          echo -e "SUSFS_BRANCH=$SUSFS_BRANCH" >> $GITHUB_OUTPUT
+
+          patch -p1 < SUSFS/kernel_patches/0001-main-patch-kernel.patch
           curl -LSs https://github.com/sidex15/android_kernel_lge_sm8150/commit/fcc59dc3310d3a1511d02dc3ac6d1e113517ece1.patch | patch -p1
 
           cat arch/${{ env.arch }}/configs/${{ env.DEFCONFIG_NAME }}
