--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -296,7 +296,7 @@ jobs:
           elif [[ "$whichhook" == "syscall" ]]; then
             patch -p1 < SUSFS/kernel_patches/0001-syscall-ksu-hook.patch
             if [[ "$withRoot" == "ksun" ]]; then
-              patch -p1 < SUSFS/kernel_patches/KernelSU/ksu_access_ok_for_ksun.patch
+              patch -d KernelSU -p1 < SUSFS/kernel_patches/KernelSU/ksu_access_ok_for_ksun.patch
             fi
           fi
 
