--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -295,7 +295,7 @@ jobs:
             patch -p1 < SUSFS/kernel_patches/0001-standard-ksu-hook.patch
           elif [[ "$whichhook" == "syscall" ]]; then
             patch -p1 < SUSFS/kernel_patches/0001-syscall-ksu-hook.patch
-            if [[ "$withRoot" == "ksun" || "$withRoot" == "sukisu" ]]; then
+            if [[ "$withRoot" == "ksun" || "$withRoot" == "ksun" ]]; then
               patch -d KernelSU -p1 < SUSFS/kernel_patches/KernelSU/security_bprm_check_for_${{ matrix.repos.withRoot }}.patch
             fi
             if [[ "$withRoot" == "sukisu" ]]; then
