--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -291,16 +291,10 @@ jobs:
           echo -e "SUSFS_REF=$SUSFS_REF" >> $GITHUB_OUTPUT
           echo -e "SUSFS_BRANCH=$SUSFS_BRANCH" >> $GITHUB_OUTPUT
 
-          if [[ "$whichhook" == "standard" ]]; then
-            patch -p1 < SUSFS/kernel_patches/0001-standard-ksu-hook.patch
-          elif [[ "$whichhook" == "syscall" ]]; then
-            patch -p1 < SUSFS/kernel_patches/0001-syscall-ksu-hook.patch
-            if [[ "$withRoot" == "ksun" || "$withRoot" == "sukisu" ]]; then
-              patch -d KernelSU -p1 < SUSFS/kernel_patches/KernelSU/security_bprm_check_for_${{ matrix.repos.withRoot }}.patch
-            fi
-            if [[ "$withRoot" == "sukisu" ]]; then
-              patch -d KernelSU -p1 < SUSFS/kernel_patches/KernelSU/ksu_access_ok_for_${{ matrix.repos.withRoot }}_1.patch
-            fi
+          if [[ "$KNAME" == "astera" || "$KNAME" == "nova" ]]; then
+            patch -p1 < SUSFS/kernel_patches/0001-standard-ksu-hook_1.patch
+          else
+            patch -p1 < SUSFS/kernel_patches/0001-standard-ksu-hook_2.patch
           fi
 
       - name: "🥷 Add SUSFS patches"
@@ -338,8 +332,6 @@ jobs:
                 curl -LSs "https://raw.githubusercontent.com/SukiSU-Ultra/SukiSU-Ultra/main/kernel/setup.sh" | bash -s susfs-1.5.7
               else
                 curl -LSs "https://raw.githubusercontent.com/SukiSU-Ultra/SukiSU-Ultra/main/kernel/setup.sh" | bash -s susfs-main
-                patch -d KernelSU -p1 < SUSFS/kernel_patches/KernelSU/security_bprm_check_for_${{ matrix.repos.withRoot }}.patch
-                patch -d KernelSU -p1 < SUSFS/kernel_patches/KernelSU/ksu_access_ok_for_${{ matrix.repos.withRoot }}_2.patch
               fi
             fi
           fi
