--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   check-updates:
     runs-on: ubuntu-latest
+    if: github.repository_owner == 'cvnertnc' && github.repository == 'cvnertnc/Begonia-Kernel-Builder'
 
     steps:
       - name: Checkout the repository
@@ -103,11 +104,13 @@ jobs:
     permissions: write-all
     needs: check-updates
     uses: ./.github/workflows/build-release.yml
+    if: github.repository_owner == 'cvnertnc' && github.repository == 'cvnertnc/Begonia-Kernel-Builder'
     if: ${{ needs.check-updates.outputs.update == 'true' || needs.check-updates.outputs.branch_exists == 'false' }}
     secrets: inherit
 
   trigger-telegram-report:
     runs-on: ubuntu-latest
+    if: github.repository_owner == 'cvnertnc' && github.repository == 'cvnertnc/Begonia-Kernel-Builder'
     needs: build
     steps:
       - name: Telegram Report
